force-app/main/default/objects/TW_Contact_Manual__c/TW_Contact_Manual__c.object-meta.xml
<CustomObject>
    <label>TW Contact Manual</label>
    <nameField>
        <label>TW Contact Manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TW Contact Manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>