force-app/main/default/objects/TW_Contact_Manual__c/fields/Addr_City__c.field-meta.xml
<CustomField>
    <fullName>Addr_City__c</fullName>
    <label>Addr_City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>