force-app/main/default/objects/TW_Contact_Manual__c/fields/Addr_Country__c.field-meta.xml
<CustomField>
    <fullName>Addr_Country__c</fullName>
    <label>Addr_Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>