force-app/main/default/objects/TW_Contact_Manual__c/fields/Addr_District__c.field-meta.xml
<CustomField>
    <fullName>Addr_District__c</fullName>
    <label>Addr_District</label>
    <length>25</length>
    <type>Text</type>
</CustomField>