force-app/main/default/objects/TW_Contact_Manual__c/fields/BR_BrandID__c.field-meta.xml
<CustomField>
    <fullName>BR_BrandID__c</fullName>
    <label>BR_BrandID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>