force-app/main/default/objects/TW_Contact_Manual__c/fields/BR_BrandName__c.field-meta.xml
<CustomField>
    <fullName>BR_BrandName__c</fullName>
    <label>BR_BrandName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>