force-app/main/default/objects/TW_Contact_Manual__c/fields/BR_CurrentBrandName__c.field-meta.xml
<CustomField>
    <fullName>BR_CurrentBrandName__c</fullName>
    <label>BR_CurrentBrandName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>