force-app/main/default/objects/TW_Contact_Manual__c/fields/BR_PreviousBrandID__c.field-meta.xml
<CustomField>
    <fullName>BR_PreviousBrandID__c</fullName>
    <label>BR_PreviousBrandID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>