force-app/main/default/objects/TW_Contact_Manual__c/fields/BR_RelationType__c.field-meta.xml
<CustomField>
    <fullName>BR_RelationType__c</fullName>
    <label>BR_RelationType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>