force-app/main/default/objects/TW_Contact_Manual__c/fields/Child_BirthTimes__c.field-meta.xml
<CustomField>
    <fullName>Child_BirthTimes__c</fullName>
    <label>Child_BirthTimes</label>
    <length>10</length>
    <type>Text</type>
</CustomField>