force-app/main/default/objects/TW_Contact_Manual__c/fields/Child_DeliveredHospital__c.field-meta.xml
<CustomField>
    <fullName>Child_DeliveredHospital__c</fullName>
    <label>Child_DeliveredHospital</label>
    <length>50</length>
    <type>Text</type>
</CustomField>