force-app/main/default/objects/TW_Contact_Manual__c/fields/Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>Child_DOB__c</fullName>
    <label>Child_DOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>