force-app/main/default/objects/TW_Contact_Manual__c/fields/Child_LastName__c.field-meta.xml
<CustomField>
    <fullName>Child_LastName__c</fullName>
    <label>Child_LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>