force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Description__c</fullName>
    <label>Contact Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>