force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact_Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>