force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_Gender__c.field-meta.xml
<CustomField>
    <fullName>Contact_Gender__c</fullName>
    <label>Contact_Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>