force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_HomePhone__c</fullName>
    <label>Contact_HomePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>