force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_MobilePhone__c</fullName>
    <label>Contact_MobilePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>