force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_OtherPhone__c</fullName>
    <label>Contact_OtherPhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>