force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_OtherPhoneExt__c.field-meta.xml
<CustomField>
    <fullName>Contact_OtherPhoneExt__c</fullName>
    <label>Contact_OtherPhoneExt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>