force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_PreferredTime__c.field-meta.xml
<CustomField>
    <fullName>Contact_PreferredTime__c</fullName>
    <label>Contact_PreferredTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>