force-app/main/default/objects/TW_Contact_Manual__c/fields/Contact_SpousePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_SpousePhone__c</fullName>
    <label>Contact_SpousePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>