force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CR_CampaignID__c</fullName>
    <label>CR_CampaignID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>