force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CR_CampaignName__c</fullName>
    <label>CR_CampaignName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>