force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_CampaignText__c.field-meta.xml
<CustomField>
    <fullName>CR_CampaignText__c</fullName>
    <label>CR_CampaignText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>