force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChannelID__c.field-meta.xml
<CustomField>
    <fullName>CR_ChannelID__c</fullName>
    <label>CR_ChannelID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>