force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChannelName__c.field-meta.xml
<CustomField>
    <fullName>CR_ChannelName__c</fullName>
    <label>CR_ChannelName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>