force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChildFoodIntake__c.field-meta.xml
<CustomField>
    <fullName>CR_ChildFoodIntake__c</fullName>
    <label>CR_ChildFoodIntake</label>
    <length>50</length>
    <type>Text</type>
</CustomField>