force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChildNoVeg__c.field-meta.xml
<CustomField>
    <fullName>CR_ChildNoVeg__c</fullName>
    <label>CR_ChildNoVeg</label>
    <length>50</length>
    <type>Text</type>
</CustomField>