force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChildPicky__c.field-meta.xml
<CustomField>
    <fullName>CR_ChildPicky__c</fullName>
    <label>CR_ChildPicky</label>
    <length>50</length>
    <type>Text</type>
</CustomField>