force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChildPlayWithFood__c.field-meta.xml
<CustomField>
    <fullName>CR_ChildPlayWithFood__c</fullName>
    <label>CR_ChildPlayWithFood</label>
    <length>100</length>
    <type>Text</type>
</CustomField>