force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_ChildPreference__c.field-meta.xml
<CustomField>
    <fullName>CR_ChildPreference__c</fullName>
    <label>CR_ChildPreference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>