force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_OrganisationName__c.field-meta.xml
<CustomField>
    <fullName>CR_OrganisationName__c</fullName>
    <label>CR_OrganisationName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>