force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_PromoterCode__c.field-meta.xml
<CustomField>
    <fullName>CR_PromoterCode__c</fullName>
    <label>CR_PromoterCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>