force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>CR_RegistrationDate__c</fullName>
    <label>CR_RegistrationDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>