force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_SampleProductID__c.field-meta.xml
<CustomField>
    <fullName>CR_SampleProductID__c</fullName>
    <label>CR_SampleProductID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>