force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_SupervisorCode__c.field-meta.xml
<CustomField>
    <fullName>CR_SupervisorCode__c</fullName>
    <label>CR_SupervisorCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>