force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_UTMContent__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMContent__c</fullName>
    <label>CR_UTMContent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>