force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_UTMMedium__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMMedium__c</fullName>
    <label>CR_UTMMedium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>