force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_UTMString__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMString__c</fullName>
    <label>CR_UTMString</label>
    <length>50</length>
    <type>Text</type>
</CustomField>