force-app/main/default/objects/TW_Contact_Manual__c/fields/CR_UTMTerm__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMTerm__c</fullName>
    <label>CR_UTMTerm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>