force-app/main/default/objects/TW_Contact_Manual__c/fields/Object_Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Object_Extraction_Status__c</fullName>
    <label>Object Extraction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>