force-app/main/default/objects/TW_Contact_Manual__c/fields/Related_Contact_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_HomePhone__c</fullName>
    <label>Related Contact HomePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>