force-app/main/default/objects/TW_Contact_Manual__c/fields/Related_Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_LastName__c</fullName>
    <label>Related Contact LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>