force-app/main/default/objects/TW_Contact_Manual__c/fields/Related_Contact_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_MobilePhone__c</fullName>
    <label>Related Contact MobilePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>